--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -9,116 +9,24 @@
 {% endblock %}
 
 {% block body %}
-    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée « sang placentaire »). Le cordon ombilical contient un sang particulièrement riche en cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    <h1>Qu'est-ce que le don de sang de cordon ?</h1>
+    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée de « sang placentaire »), il s’agit du sang se trouvant dans le cordon ombilical. Ce sang est particulièrement riche en cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
     -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
     -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
-    Plaquettes : aident le sang à coaguler</span></span> , ainsi il peut être utilisé par la médecine : pour soigner des personnes malades, ou pour faire avancer la recherche. 
+    Plaquettes : aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour <a href="https://www.dondesangdecordon.fr/">soigner</a>  des patients atteints de diverses maladies du sang.
     <br><br>
-    Ce sang présent dans le cordon ombilical est prélevé par ponction, seulement lorsque l’accouchement est terminé : le bébé a été expulsé et le cordon a été coupé. 
-    Le don de sang placentaire est un acte <strong>indolore, gratuit, anonyme et volontaire.</strong>  
+    Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. Le don de sang placentaire est un acte <strong>indolore, gratuit, anonyme et volontaire.</strong>  
     <br><br>
     Celui-ci peut servir pour deux usages : thérapeutique ou scientifique.
-    En fonction de l’usage que vous choisirez, ce dernier n’aura pas le même devenir. 
     <br><br>
-    Vous pouvez choisir de faire un don à usage thérapeutique afin d’aider les personnes malades, cependant il se peut qu’il soit réorienté ultérieurement vers un usage scientifique s’il est non conforme pour être greffer à un patient.
-    Dans ce cas ou si vous souhaitez directement faire un don à usage scientifique, le prélèvement sera réceptionné par l’EFS pour ensuite être traité et stocké par LYMPHOBANK puis envoyé aux <strong>laboratoires de recherche partenaires français</strong> dans le but d’être utilisé pour faire avancer la recherche.
-    </p>
-    <h1>Que peut-on donner ?</h1>
-    <h2>Il est possible de donner deux éléments :</h2>
-    <p>Lorsque le cordon est coupé, une ponction est réalisée dans la veine qui se trouve dans le cordon ombilical. 
-    Le sang de cordon est systématiquement utilisé pour produire des cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
-    <br><br>
-    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
-    Plaquettes : aident le sang à coaguler</span></span>, des cellules immunitaires, du sérum ou du plasma. Les cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
-    <br><br>
-    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
-    Plaquettes : aident le sang à coaguler</span></span> servent par exemple à tester des vaccins ou des biomédicaments (médicaments d’origine biologique) pour le traitement de cancers ou de maladies auto-immunes. Les cellules immunitaires sont une source de biomédicaments anti-tumoraux et le sérum placentaire, supplément indispensable dans les milieux de culture cellulaire, remplace le sérum d’origine animale.</p>
-    <button class="accordion"><p class="accordionTitle">Le cordon ombilical</p></button>
-    <div class="panel">
-        <img id="cordon" class="illustrationAccordeon" src={{ asset ('img/icons/cordon.svg')}}>
-        <p>
-        Le cordon ombilical permet d’isoler différents types de cellules telles que les cellules souches <span class="tooltip">mésenchymateuses <span class="tooltipText">Les cellules souches mésenchymateuses sont des cellules issues de la moelle osseuse qui jouent un rôle dans la production et réparation de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> ou les cellules <span class="tooltip">endothéliales <span class="tooltipText">Les cellules endothéliales sont des cellules minces et plates qui permettent un transfert rapide des substances entre le sang et le liquide interstitiel.
-        <br><br>
-        Liquide interstitiel : Le liquide interstitiel remplit l'espace entre les capillaires sanguins et les cellules, Il facilite les échanges de nutriments et de déchets entre ceux-ci.
-        <br><br>
-        Capillaires : Le rôle des capillaires est de nourrir les tissus en nutriments et oxygène. Reliés aux veines et aux artères, les capillaires sanguins transportent les nutriments, notamment le glucose, et le dioxygène.
-        </span></span>. Les cellules souches mésenchymateuses sont utilisées pour le développement d’approches innovantes de thérapie cellulaire régénératrices, car elles jouent un rôle dans la réparation des tissus osseux, cartilagineux, adipeux ou musculaires. Les cellules <span class="tooltip">endothéliales <span class="tooltipText">Les cellules endothéliales sont des cellules minces et plates qui permettent un transfert rapide des substances entre le sang et le liquide interstitiel.
-        <br><br>
-        Liquide interstitiel : Le liquide interstitiel remplit l'espace entre les capillaires sanguins et les cellules, Il facilite les échanges de nutriments et de déchets entre ceux-ci.
-        <br><br>
-        Capillaires : Le rôle des capillaires est de nourrir les tissus en nutriments et oxygène. Reliés aux veines et aux artères, les capillaires sanguins transportent les nutriments, notamment le glucose, et le dioxygène.
-        </span></span> servent de modèle d’étude in vitro de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.
-        </p>
-    </div>
-    <p>Le placenta est également une source de cellules souches mésenchymateuses.</p>
-
-    <h2>Schéma explicatif (cliquez pour en savoir plus) :</h2>
-    {# <div class="schemaDon">
-        <div class="schemaDonStart">
-            <button class="schemaToogle"><img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}></button>
-        </div>
-        <div class="schemaDonSteep1">
-            <div class="doubleFleche">
-                <i id="sangFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
-                <i id="cordonFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
-            </div>
-            <div class="sangCordon">
-                <div class="sangSteep1">
-                    <h2>Sang de cordon</h2>
-                    <img id="pocheIcon" class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-                </div>
-                <div class="cordonSteep1">
-                    <h2>Cordon ombilical</h2>
-                    <img id="cordonIcon" class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>
-                </div>
-            </div>
-        </div>
-    </div> #}
-    
-    
-    <h1>Quel usage pour ce don ?</h1>
-    <p>Le don de sang placentaire peut servir pour 2 usages :</p>
-    <h2>Un usage scientifique :</h2>
-    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}>Les cellules de sang de cordon sont des cellules précieuses pour la recherche. Elles peuvent faire avancer la recherche biomédicale, notamment dans les domaines de l’infectiologie, l’immunologie, l’hématologie, l’oncologie et de la thérapie cellulaire. Elles permettent également de contribuer à la recherche pour des traitements innovants.</p></div>
-    <h2 id="cardsRechercheTitle">Recherches appliquées :</h2>
-    <div class="cardRecherche">
-        <div class="card">
-            <div class="card-title"><h2>Pathologies adultes :</h2></div>
-            <div class="contentCard">
-                <ul>
-                    <li>Maladies Inflammatoires Chroniques de l’Intestin</li>
-                    <li>Lymphome B</li>
-                    <li>Leucémie myéloïde</li>
-                    <li>Infection HIV</li>
-                    <li>Cancer de l'ovaire</li>
-                    <li>Cancer du sein </li>
-                    <li>Mélanome</li>
-                </ul>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-title"><h2>Pathologies pédiatriques :</h2></div>
-            <div class="contentCard">
-                <ul>
-                    <li>Maladies Inflammatoires</li>
-                    <li>Chroniques de l’Intestin (sujets jeunes / ado)</li>
-                    <li>Lymphome B</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <h2>Un usage thérapeutique </h2>
-    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p>La greffe de sang placentaire consiste à greffer de nouvelles cellules souches hématopoïétiques dans le cas d’un patient atteint de certaines maladies du sang, tumorales (ex : leucémies) ou non (ex : déficits immunitaires d’origine génétique)
+    <h2>Le don du sang de cordon thérapeutique </h2>
+    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p>La plupart des maternités ne proposent pas de recueillir le sang de cordon : seules certaines maternités, agréées par le Ministère de la Santé, appartiennent au Réseau Français de Sang Placentaire et sont autorisées à prélever le sang de cordon pour un usage thérapeutique. Les dons de sang sont alors centralisés, traités et conservés en France au sein de quatre Banques de Sang Placentaire, dans l’attente de leur administration à un patient.
     <br>
-    Ces cellules souches hématopoïétiques permettent de traiter des maladies immunes et dégénératives, des cancers et des maladies hématologiques (leucémies, lymphomes, myélomes…). Elles contribuent à la guérison du patient puisqu’elles vont remplacer ou réparer un tissu hématopoïétique naturellement déficient (ex : pour une aplasie médullaire) ou qui a été endommagé à la suite un lourd traitement (ex : chimiothérapie ou radiothérapie).
-    <br>
-    Celles-ci sont injectées dans la circulation sanguine du receveur et vont se diriger vers la moelle osseuse au sein de laquelle elles vont produire à nouveau les différents éléments du sang.
+    Cependant, il se peut que le don de sang de cordon soit non conforme pour être greffé à un patient. Il peut alors être réorienté vers un usage scientifique et servir à la recherche.
+    <br><br>
+    Pour en savoir plus sur le don de sang de cordon à usage thérapeutique, vous pouvez consulter le site de <a href="https://www.dondesangdecordon.fr/don.php">l’Agence de la Biomédecine.</a>
     </p></div>
-
-    <h2>Devenir du don selon la maternité :</h2>
     <div class="cardsHosto">
         <div class="card">
             <div class="card-pic">
@@ -164,6 +72,13 @@
                 </div>
             </div>
         </div>
+    </div>
+    <h2>Le don de sang de cordon scientifique</h2>
+    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}>Les maternités partenaires de LYMPHOBANK proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
+    <br>
+    Donner son sang de cordon, c’est aider la recherche !
+    </p></div>
+    <div class="cardsHosto">
         <div class="card">
             <div class="card-pic">
                 <img src={{ asset ('img/icons/hospital.png')}}>
@@ -193,6 +108,88 @@
                     <img class="icon" src={{ asset ('img/icons/laboratory.svg')}}>
                     <h2>Laboratoires de recherche</h2>
                 </div>
+            </div>
+        </div>
+    </div>
+    <h1>Que peut-on donner ?</h1>
+    <h2>Il est possible de donner deux éléments :</h2>
+    
+    <button class="accordion"><p class="accordionTitle">Le sang de cordon</p></button>
+        <div class="panel">
+            <p>Lorsque le cordon ombilical est coupé, une ponction est réalisée dans la veine qui se trouve dans le cordon ombilical. Le sang de cordon est utilisé pour produire : 
+        <ul class="prodCordon">
+            <li>des cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+            -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+            <br><br>
+            -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
+            Plaquettes : aident le sang à coaguler</span></span>. Elles servent par exemple à tester des vaccins ou des biomédicaments (médicaments d’origine biologique) pour le traitement de cancers ou de maladies auto-immunes</li>
+            <li>des cellules <span class="tooltip">immunitaires <span class="tooltipText">Les cellules immunitaires sont les globules blancs, ou leucocytes, qui comprennent différentes fractions (lymphocytes, monocytes, polynucléaires), elles-même subdivisées en différentes sous-populations.</span></span>, sources de biomédicaments contre le cancer</li>
+            <li>du <span class="tooltip">sérum<span class="tooltipText">Le sérum est le liquide dans lequel baignent les cellules sanguines (globules rouges, globules blancs, plaquettes).</span></span> placentaire, qui remplace de sérum d’origine animale, supplément indispensable dans les milieux de culture cellulaire</li>
+        </ul>
+        </p>
+    </div>
+    <button class="accordion"><p class="accordionTitle">Le cordon ombilical</p></button>
+    <div class="panel">
+        <img id="cordon" class="illustrationAccordeon" src={{ asset ('img/icons/cordon.svg')}}>
+        <p>
+        Le cordon ombilical est récupéré après avoir prélevé le sang de cordon. Il permet d’isoler :
+        <br><br>
+        <ul class="prodCordon">
+            <li>les cellules souches <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, utilisées pour le développement d’approches innovantes de thérapie cellulaire <span class="tooltip">régénératrice<span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span></li>
+            <li>les cellules <span class="tooltip">endothéliales<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span>, qui servent de modèle d’étude in vitro de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.</li>        
+        </ul>
+        </p>
+    </div>
+    <p>Le placenta est également une source de cellules souches mésenchymateuses.</p>
+
+    <h2>Schéma explicatif (cliquez pour en savoir plus) :</h2>
+    {# <div class="schemaDon">
+        <div class="schemaDonStart">
+            <button class="schemaToogle"><img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}></button>
+        </div>
+        <div class="schemaDonSteep1">
+            <div class="doubleFleche">
+                <i id="sangFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
+                <i id="cordonFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
+            </div>
+            <div class="sangCordon">
+                <div class="sangSteep1">
+                    <h2>Sang de cordon</h2>
+                    <img id="pocheIcon" class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                </div>
+                <div class="cordonSteep1">
+                    <h2>Cordon ombilical</h2>
+                    <img id="cordonIcon" class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>
+                </div>
+            </div>
+        </div>
+    </div> #}
+    <h1>Quel usage pour ce don ?</h1>
+    <p>Les cellules de sang de cordon sont des cellules précieuses pour la recherche. Elles peuvent faire avancer la recherche biomédicale, notamment dans les domaines de l’infectiologie, l’immunologie, l’hématologie, l’oncologie et de la thérapie cellulaire. Elles permettent également de contribuer à la recherche pour des traitements innovants.</p>
+    <h2 id="cardsRechercheTitle">Recherches appliquées :</h2>
+    <div class="cardRecherche">
+        <div class="card">
+            <div class="card-title"><h2>Pathologies adultes :</h2></div>
+            <div class="contentCard">
+                <ul>
+                    <li>Maladies Inflammatoires Chroniques de l’Intestin</li>
+                    <li>Lymphome B</li>
+                    <li>Leucémie myéloïde</li>
+                    <li>Infection HIV</li>
+                    <li>Cancer de l'ovaire</li>
+                    <li>Cancer du sein </li>
+                    <li>Mélanome</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-title"><h2>Pathologies pédiatriques :</h2></div>
+            <div class="contentCard">
+                <ul>
+                    <li>Maladies Inflammatoires</li>
+                    <li>Chroniques de l’Intestin (sujets jeunes / ado)</li>
+                    <li>Lymphome B</li>
+                </ul>
             </div>
         </div>
     </div>
