--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -11,41 +11,64 @@
 {% block body %}
     <h1>Qui sommes-nous ?</h1>
     <h2>Notre histoire</h2>
-    <p><a href="/">Mon-cordon-precieux.fr</a> est un site secondaire de la société LYMPHOBANK visant à vous informer sur le don de sang placentaire autrement appelé don de sang de cordon pour un usage scientifique.
+    <p><a href="/">Mon-cordon-precieux.fr</a> est un site destiné à vous informer sur le don de sang placentaire (également appelé don de sang de cordon) pour un usage scientifique. Il a été créé par :
     <br><br>
-    LYMPHOBANK est une biotech française créée à Besançon en 2017 par Eric Robinet, ancien chercheur de l'Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC).
-    <br><br>
-    Dans le cadre de son activité <strong>Lymphobank Research</strong>, l’entreprise a vocation à fournir des cellules sanguines adultes et placentaires à usage de recherche et des prestations de services en immunothérapie cellulaire. <br>
-    L’utilisation de produits issus du sang Lymphobank est exclusivement réservée aux secteurs de la recherche, de l’enseignement ou de la fabrication de réactifs non diagnostiques.
-    Basée au sein des locaux de l'EFS-BFC à Besançon, Lymphobank fait bénéficier de son accès privilégié aux produits sanguins à usage de recherche et aux plateformes technologiques de l'EFS-BFC.
+    LYMPHOBANK est une société de biotechnologie française créée à Besançon en 2017 par Éric Robinet, ancien chercheur de l'Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC) afin de développer un traitement innovant du cancer du foie. Afin de financer ce projet de recherche, LYMPHOBANK mène en parallèle une activité industrielle visant à fournir des produits issus du sang de donneurs de sang ou de sang de cordon à des laboratoires de recherche.
     </p>
     <h2>Notre mission</h2>
-    <p>Nous souhaitons être un partenaire de référence dans la réalisation de projets de recherche de nos associés en leur faisant gagner du temps et en les accompagnant dans la mise en efficience de leurs coûts de recherche.</p>
+    <p>‘’Accompagner la recherche, c’est accompagner la vie’’ : tel est notre credo. Nous souhaitons être un partenaire de référence dans la réalisation des projets de recherche de nos clients en leur faisant gagner du temps et de la sérénité pour l’obtention de produits fiables issus du sang.</p>
     <h2>Nos valeurs</h2>
-    <div class="valeurs">
-        <div class="card">
-            <div class="card-title"><h2>Nos valeurs sont basées sur le don du sang :</h2></div>
-            <div class="contentCard">
-                <ul>
-                    <li>L’éthique</li>
-                    <li>La transparence</li>
-                    <li>L'anonymat</li>
-                    <li>La gratuité et le bénévolat</li>
-                    <li>Le non-profit personnel</li>
-                </ul>
+    <p><strong>Bien qu’étant une société privée, nos valeurs sont basées sur les valeurs du don du sang en France : </strong></p>
+    <div class="cadre">
+        <h2>Donner son sang de cordon, c'est GÉANT !</h2>
+        <div class="schemaGeant">
+            <div class="geantLetter">
+                <h2><div class="underline">G</div>ratuit</h2>
+                <div class="tooltipGeant">
+                    <img class="icon" src={{ asset ('img/icons/pregnant.png')}}>
+                    <span class="tooltipGeantText">Le don ne donne lieu à aucun dédommagement ni rémunération mais aucun coût n’est facturé à la maman 
+                    </span>
+                </div>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="geantLetter">
+                <h2><div class="underline">E</div>thique</h2>
+                <div class="tooltipGeant">
+                    <img class="icon" src={{ asset ('img/icons/hospital.png')}}>
+                    <span class="tooltipGeantText">Les prélèvements sont réalisés sous couvert d’une autorisation préalable, délivrée par le Ministère de l’Enseignement Supérieur et de la Recherche
+                    </span>
+                </div>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="geantLetter">
+                <h2><div class="underline">A</div>nonyme</h2>
+                <div class="tooltipGeant">
+                    <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
+                    <span class="tooltipGeantText">Chaque don est anonymisé par l’EFS-BFC avant d’être transmis à Lymphobank, qui n’a accès à aucune donnée personnelle
+                    </span>
+                </div>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="geantLetter">
+                <h2><div class="underline">N</div>on-profit </h2>
+                <div class="tooltipGeant">
+                    <img id="goutte" class="icon" src={{ asset ('img/icons/LymphobankGoutte.png')}}>
+                    <span class="tooltipGeantText">Les bénéfices réalisés par Lymphobank ne peuvent en aucun cas être redistribués au Président de la société, ni à d’éventuels associés ou investisseurs
+                    </span>
+                </div>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="geantLetter">
+                <h2><div class="underline">T</div>ransparent</h2>
+                <div class="tooltipGeant">
+                    <img class="icon" src={{ asset ('img/icons/biology.png')}}>
+                    <span class="tooltipGeantText">Un Comité de Surveillance indépendant vérifie le respect par Lymphobank de ses engagements financiers
+                    </span>
+                </div>
             </div>
         </div>
     </div>
-    <p>Aujourd'hui, les biotechnologies constituent une des activités importantes des laboratoires de recherche en biologie. La rencontre de la recherche scientifique et des marchés où se côtoient les questions :</p>
-    <ul class="questions">
-        <li>De la gestion des risques</li>
-        <li>Du partage équitable des ressources</li>
-        <li>Du développement durable</li>
-    </ul>
-    <br>
-    <p>Les résultats de l'activité de notre entreprise Lymphobank Research seront totalement réinvestis dans notre activité Lymphobank Clinics.
-    Lymphobank Clinics a vocation à développer une activité R&D innovante d'immunothérapie adoptive allogénique du cancer.
-    </p>
+    <p><strong>Les résultats de notre activité industrielle sont totalement réinvestis dans notre activité de Recherche & Développement, qui a vocation à développer une activité innovante d'immunothérapie du cancer.</strong></p>
     <h2>Nos engagements</h2>
     <p>Notre investissement envers nos partenaires se traduit par la mise en place d’une démarche Qualité ISO 9001, afin de garantir une qualité optimale de nos produits et services.
     <br><br>
