--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -26,32 +26,47 @@
             <div class="schemaGeant">
                 <div class="geantLetter">
                     <h2><div class="underline">G</div>ratuit</h2>
-                    <img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}>
+                    <div class="tooltipGeant">
+                        <img class="icon" src={{ asset ('img/icons/pregnant.png')}}>
+                        <span class="tooltipGeantText">Le don ne donne lieu à aucun dédommagement ni rémunération mais aucun coût n’est facturé à la maman 
+                        </span>
+                    </div>
                 </div>
                 <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                 <div class="geantLetter">
                     <h2><div class="underline">E</div>thique</h2>
-                    <img class="icon" src={{ asset ('img/icons/hospital.png')}}>
+                    <div class="tooltipGeant">
+                        <img class="icon" src={{ asset ('img/icons/hospital.png')}}>
+                        <span class="tooltipGeantText">Les prélèvements sont réalisés sous couvert d’une autorisation préalable, délivrée par le Ministère de l’Enseignement Supérieur et de la Recherche
+                        </span>
+                    </div>
                 </div>
                 <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                 <div class="geantLetter">
                     <h2><div class="underline">A</div>nonyme</h2>
-                    <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
+                    <div class="tooltipGeant">
+                        <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
+                        <span class="tooltipGeantText">Chaque don est anonymisé par l’EFS-BFC avant d’être transmis à Lymphobank, qui n’a accès à aucune donnée personnelle
+                        </span>
+                    </div>
                 </div>
                 <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                 <div class="geantLetter">
                     <h2><div class="underline">N</div>on-profit </h2>
                     <div class="tooltipGeant">
                         <img id="goutte" class="icon" src={{ asset ('img/icons/LymphobankGoutte.png')}}>
-                        <span class="tooltipGeantText">Lymphobank est surveillé par un comité de surveillance
-                        et par le ministère de la santé.
+                        <span class="tooltipGeantText">Les bénéfices réalisés par Lymphobank ne peuvent en aucun cas être redistribués au Président de la société, ni à d’éventuels associés ou investisseurs
                         </span>
                     </div>
                 </div>
                 <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                 <div class="geantLetter">
                     <h2><div class="underline">T</div>ransparent</h2>
-                    <img class="icon" src={{ asset ('img/icons/biology.png')}}>
+                    <div class="tooltipGeant">
+                        <img class="icon" src={{ asset ('img/icons/biology.png')}}>
+                        <span class="tooltipGeantText">Un Comité de Surveillance indépendant vérifie le respect par Lymphobank de ses engagements financiers
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
