--- a/assets/styles/accordeon.scss
+++ b/assets/styles/accordeon.scss
@@ -93,6 +93,12 @@ p.accordionTitle{
         float: left;
         border-radius: 15px;
         box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
+        transform: scale(100%);
+        transition: transform .2s ease-in-out;
+    }
+    .illustrationAccordeon:hover{
+        transform: scale(102%);
+        transition: transform .2s ease-in-out;
     }
 }
 
