--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -80,6 +80,13 @@ html, body{
     float: left;
     border-radius: 15px;
     box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
+    transform: scale(100%);
+    transition: transform .2s ease-in-out;
+
+  }
+  .illustrationLeft:hover{
+    transform: scale(102%);
+    transition: transform .2s ease-in-out;
   }
 
   //icon gauche paragraphe
@@ -95,6 +102,11 @@ html, body{
     height: auto;
     font-size: 1.1em;
     margin-bottom: 2em;
+    a{
+      color: $pastel;
+      font-weight: bold;
+      text-decoration-color: black;
+    }
   }
 }
 
@@ -102,6 +114,14 @@ html, body{
 .icon{
   width: 64px;
   height: auto;
+}
+.icon:hover{
+  transform: scale(105%);
+  transition: transform .2s ease-in-out;
+}
+.icon{
+  transform: scale(100%);
+  transition: transform .2s ease-in-out;
 }
 
 
